--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -26,4 +26,6 @@ jobs:
             cd NetVampiro
             dotnet build --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: pwd
+           cd NetVampiro
+           dotnet test --no-restore --verbosity normal
